Test/spec/simd/simd_address.wast
;; Load v128 data with different valid offset/alignment

(module
  (memory 1)
  (data (i32.const 0) "abcdefghijklmnopqrstuvwxyz")
  (data (offset (i32.const 65495)) "ABCDEFGHIGKLMNOPQRSTUVWXYZ")

  (func (export "load_data_1") (param $i i32) (result v128)
    (v128.load offset=0 (local.get $i))                   ;; 0x61 0x62 0x63 0x64 0x65 0x66 0x67 0x68 0x69 0x6a 0x6b 0x6c 0x6d 0x6e 0x6f 0x70 'a b c d e f g h i j k l m n o p '
  )
  (func (export "load_data_2") (param $i i32) (result v128)
    (v128.load align=1 (local.get $i))                    ;; 0x61 0x62 0x63 0x64 0x65 0x66 0x67 0x68 0x69 0x6a 0x6b 0x6c 0x6d 0x6e 0x6f 0x70 'a b c d e f g h i j k l m n o p '
  )
  (func (export "load_data_3") (param $i i32) (result v128)
    (v128.load offset=1 align=1 (local.get $i))           ;; 0x62 0x63 0x64 0x65 0x66 0x67 0x68 0x69 0x6a 0x6b 0x6c 0x6d 0x6e 0x6f 0x70 0x71 'b c d e f g h i j k l m n o p q'
  )
  (func (export "load_data_4") (param $i i32) (result v128)
    (v128.load offset=2 align=1 (local.get $i))           ;; 0x63 0x64 0x65 0x66 0x67 0x68 0x69 0x6a 0x6b 0x6c 0x6d 0x6e 0x6f 0x70 0x71 0x72 'c d e f g h i j k l m n o p q r'
  )
  (func (export "load_data_5") (param $i i32) (result v128)
    (v128.load offset=25 align=1 (local.get $i))          ;; 0x7a 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 'z 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0'
  )
)

(assert_return (invoke "load_data_1" (i32.const 0)) (v128.const i32x4 0x64636261 0x68676665 0x6c6b6a69 0x706f6e6d))
(assert_return (invoke "load_data_2" (i32.const 0)) (v128.const i32x4 0x64636261 0x68676665 0x6c6b6a69 0x706f6e6d))
(assert_return (invoke "load_data_3" (i32.const 0)) (v128.const i32x4 0x65646362 0x69686766 0x6d6c6b6a 0x71706f6e))
(assert_return (invoke "load_data_4" (i32.const 0)) (v128.const i32x4 0x66656463 0x6a696867 0x6e6d6c6b 0x7271706f))
(assert_return (invoke "load_data_5" (i32.const 0)) (v128.const i32x4 0x0000007a 0x00000000 0x00000000 0x00000000))

(assert_return (invoke "load_data_1" (i32.const 0)) (v128.const i16x8 0x6261 0x6463 0x6665 0x6867 0x6a69 0x6c6b 0x6e6d 0x706f))
(assert_return (invoke "load_data_2" (i32.const 0)) (v128.const i16x8 0x6261 0x6463 0x6665 0x6867 0x6a69 0x6c6b 0x6e6d 0x706f))
(assert_return (invoke "load_data_3" (i32.const 0)) (v128.const i16x8 0x6362 0x6564 0x6766 0x6968 0x6b6a 0x6d6c 0x6f6e 0x7170))
(assert_return (invoke "load_data_4" (i32.const 0)) (v128.const i16x8 0x6463 0x6665 0x6867 0x6a69 0x6c6b 0x6e6d 0x706f 0x7271))
(assert_return (invoke "load_data_5" (i32.const 0)) (v128.const i16x8 0x007a 0x0000 0x0000 0x0000 0x0000 0x0000 0x0000 0x0000))

(assert_return (invoke "load_data_1" (i32.const 0)) (v128.const i8x16 0x61 0x62 0x63 0x64 0x65 0x66 0x67 0x68 0x69 0x6a 0x6b 0x6c 0x6d 0x6e 0x6f 0x70))
(assert_return (invoke "load_data_2" (i32.const 0)) (v128.const i8x16 0x61 0x62 0x63 0x64 0x65 0x66 0x67 0x68 0x69 0x6a 0x6b 0x6c 0x6d 0x6e 0x6f 0x70))
(assert_return (invoke "load_data_3" (i32.const 0)) (v128.const i8x16 0x62 0x63 0x64 0x65 0x66 0x67 0x68 0x69 0x6a 0x6b 0x6c 0x6d 0x6e 0x6f 0x70 0x71))
(assert_return (invoke "load_data_4" (i32.const 0)) (v128.const i8x16 0x63 0x64 0x65 0x66 0x67 0x68 0x69 0x6a 0x6b 0x6c 0x6d 0x6e 0x6f 0x70 0x71 0x72))
(assert_return (invoke "load_data_5" (i32.const 0)) (v128.const i8x16 0x7a 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00))

(assert_return (invoke "load_data_1" (i32.const 65495)) (v128.const i32x4 0x44434241 0x48474645 0x4c4b4749 0x504f4e4d))
(assert_return (invoke "load_data_2" (i32.const 65495)) (v128.const i32x4 0x44434241 0x48474645 0x4c4b4749 0x504f4e4d))
(assert_return (invoke "load_data_3" (i32.const 65495)) (v128.const i32x4 0x45444342 0x49484746 0x4d4c4b47 0x51504f4e))
(assert_return (invoke "load_data_4" (i32.const 65495)) (v128.const i32x4 0x46454443 0x47494847 0x4e4d4c4b 0x5251504f))
(assert_return (invoke "load_data_5" (i32.const 65495)) (v128.const i32x4 0x0000005a 0x00000000 0x00000000 0x00000000))

(assert_return (invoke "load_data_1" (i32.const 65495)) (v128.const i16x8 0x4241 0x4443 0x4645 0x4847 0x4749 0x4c4b 0x4e4d 0x504f))
(assert_return (invoke "load_data_2" (i32.const 65495)) (v128.const i16x8 0x4241 0x4443 0x4645 0x4847 0x4749 0x4c4b 0x4e4d 0x504f))
(assert_return (invoke "load_data_3" (i32.const 65495)) (v128.const i16x8 0x4342 0x4544 0x4746 0x4948 0x4b47 0x4d4c 0x4f4e 0x5150))
(assert_return (invoke "load_data_4" (i32.const 65495)) (v128.const i16x8 0x4443 0x4645 0x4847 0x4749 0x4c4b 0x4e4d 0x504f 0x5251))
(assert_return (invoke "load_data_5" (i32.const 65495)) (v128.const i16x8 0x005a 0x0000 0x0000 0x0000 0x0000 0x0000 0x0000 0x0000))

(assert_return (invoke "load_data_1" (i32.const 65495)) (v128.const i8x16 0x41 0x42 0x43 0x44 0x45 0x46 0x47 0x48 0x49 0x47 0x4b 0x4c 0x4d 0x4e 0x4f 0x50))
(assert_return (invoke "load_data_2" (i32.const 65495)) (v128.const i8x16 0x41 0x42 0x43 0x44 0x45 0x46 0x47 0x48 0x49 0x47 0x4b 0x4c 0x4d 0x4e 0x4f 0x50))
(assert_return (invoke "load_data_3" (i32.const 65495)) (v128.const i8x16 0x42 0x43 0x44 0x45 0x46 0x47 0x48 0x49 0x47 0x4b 0x4c 0x4d 0x4e 0x4f 0x50 0x51))
(assert_return (invoke "load_data_4" (i32.const 65495)) (v128.const i8x16 0x43 0x44 0x45 0x46 0x47 0x48 0x49 0x47 0x4b 0x4c 0x4d 0x4e 0x4f 0x50 0x51 0x52))
(assert_return (invoke "load_data_5" (i32.const 65495)) (v128.const i8x16 0x5a 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00))

(assert_trap (invoke "load_data_5" (i32.const 65496)) "out of bounds memory access")


;; Load v128 data with invalid offset

(module
  (memory 1)
  (func (export "v128.load_offset_65521")
    (local v128)
    (v128.store (i32.const 0) (v128.const i32x4 4294967295 4294967295 4294967295 4294967295))
    (drop (v128.load offset=65521 (i32.const 0)))
  )
)
(assert_trap (invoke "v128.load_offset_65521") "out of bounds memory access")

(assert_malformed
  (module quote
    "(memory 1)"
    "(func"
    "  (local v128)"
    "  (v128.store (i32.const 0) (v128.const i32x4 0 1 2 3))"
    "  (drop (v128.load offset=-1 (i32.const 0)))"
    ")"
  )
  "unknown operator"
)


;; Offset constant out of range

(assert_malformed
  (module quote
    "(memory 1)"
    "(func (drop (v128.load offset=4294967296 (i32.const 0))))"
  )
  "i32 constant"
)
